upgrade gradle version and refactoring code in a line that doesn't affect the program